my/target/test/cgdb-scan/2022-04-21-063254-56724-1/failures/clang_other_error_c9R2Og.ii.stderr.txt
test/cc/libevent_server.cc:12:9: fatal error: 'event.h' file not found
#include<event.h>
        ^~~~~~~~~
1 error generated.
